# chromelens

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  error.txt  pyproject.toml
.github/workflows/: chromelens-smoke.yml
chromelens/: __init__.py  cli.py  demo_flow.py
chromelens/analysis/: __init__.py  cls.py  diffing.py  health_scorer.py  templates.py  third_party_cost.py  trace_analyzer.py
chromelens/artifacts/: __init__.py  builders.py  models.py  serializer.py
chromelens/discovery/: __init__.py  crawler.py
chromelens/export/: __init__.py  har.py
chromelens/profiler/: __init__.py  page_profiler.py  vitals.py
chromelens/report/: cli_report.py  html_report.py
chromelens/report/templates/: dashboard.html  diff_dashboard.html
docs/: benchmarks.html  examples-route-patterns.yaml  index.html  introducing-chromelens.html  next-release-requirements.md  releases-v0.3.0.md  roadmap.md
docs/reports/ajio.com/: index.html
docs/reports/apple.com/: index.html
docs/reports/bilibili.com/: index.html
docs/reports/bing.com/: index.html
docs/reports/bookmyshow.com/: index.html
docs/reports/cricbuzz.com/: index.html
docs/reports/facebook.com/: index.html
docs/reports/flipkart.com/: index.html
docs/reports/google.co.in/: index.html
docs/reports/google.com/: index.html
docs/reports/hdfcbank.com/: index.html
docs/reports/hotstar.com/: index.html
docs/reports/instagram.com/: index.html
docs/reports/jiocinema.com/: index.html
docs/reports/linkedin.com/: index.html
docs/reports/live.com/: index.html
docs/reports/microsoft.com/: index.html
docs/reports/moneycontrol.com/: index.html
docs/reports/naukri.com/: index.html
docs/reports/naver.com/: index.html
docs/reports/office.com/: index.html
scripts/: run_benchmark.py
tests/: test_core.py  test_diffing.py  test_exports.py  test_templates.py
(+10 files in other folders)
