[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromelens"
version = "0.2.0"
description = "Full-site performance X-ray powered by Chrome DevTools Protocol traces"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Manish KL", email = "manishklach@gmail.com"},
]
keywords = ["performance", "chrome-devtools", "web-performance", "profiling", "cdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "jinja2>=3.1",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
chromelens = "chromelens.cli:main"

[project.urls]
Homepage = "https://github.com/manishklach/chromelens"
Repository = "https://github.com/manishklach/chromelens"
Issues = "https://github.com/manishklach/chromelens/issues"

[tool.setuptools.packages.find]
include = ["chromelens*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
